welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:21: error: type mismatch;
 found   : Unit
 required: Boolean
      if(estFaceMur()){x = true}
                         ^SnakeBuggle:21: error: type mismatch;
 found   : Unit
 required: Boolean
      if(estFaceMur()){x = true}
      ^SnakeBuggle:19: error: type mismatch;
 found   : Unit
 required: Boolean
  	if(getDirection() == Direction.OUEST){
        ^